# sportmodel

./: .gitignore  CLAUDE.md  Cargo.toml  sportmodel.service  test_data.xlsx
scripts/: generate_test_data.py
src/: analysis.rs  body_composition.rs  domain.rs  error.rs  excel.rs  formulas.rs  gp.rs  main.rs  server.rs  tdee.rs  telegram.rs  watcher.rs
static/: app.js  index.html  style.css
