[package]
name = "sportmodel"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = { version = "0.32", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
