[package]
name = "sportmodel"
version = "0.1.0"
edition = "2024"

[features]
default = []
telegram = ["dep:teloxide", "dep:umya-spreadsheet"]

[dependencies]
calamine = { version = "0.32", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
nalgebra = "0.33"
rayon = "1.10"

# Web server
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File watching
notify = "8.2"

# Telegram bot API
teloxide = { version = "0.17.0", features = ["macros"], optional = true }
umya-spreadsheet = { version = "2.3.3", optional = true }
